# back-end/src/controllers/payment.controller.js
@@ -6,138 +6,128 @@ const models = initModel(sequelize);
 const { Op } = require("sequelize");
 const { v4: uuidv4 } = require("uuid");
 var jwt = require("jsonwebtoken");
+const moment = require("moment");
 
-const vnpayConfig = {
-  vnp_TmnCode: "WLK0W9CC",
-  vnp_HashSecret: "DPEYQCCDGQZIGYXHTYQBNSKVJIEGDEGF",
+const config = {
+  vnp_TmnCode: "SQPL0LV8",
+  vnp_HashSecret: "LPTBSFYQTKLHTOFAKUCHYWKXBPCUZKLF",
   vnp_Url: "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-  vnp_ReturnUrl: "http://localhost:3000/#/ket-qua-thanh-toan"
+  vnp_ReturnUrl: "http://localhost:3000/payment-result",
+};
+
+function pad2(n) {
+  // always returns a string
+  return (n < 10 ? "0" : "") + n;
 }
 
-const checkSumPayment = async (req, res) => {
-  try {
-    const { email, password } = { ...req.body };
-
-    let user = await models.users.findOne({
-      where: {
-        email: email,
-      },
-    });
-
-    if (!user?.dataValues) {
-      return failCode(res, "Tài khoản không tồn tại");
-    }
-
-    if (user?.dataValues?.password != password) {
-      return failCode(res, "Mật khẩu không chính xác");
-    }
-
-    // let refreshToken = jwt.sign(user.dataValues, "refresh_token_doangiasu", {
-    //   expiresIn: "40 days",
-    // });
-
-    // await models.token.create({
-    //   token_id: uuidv4(),
-    //   user_id: user?.dataValues?.user_id,
-    //   refresh_token: refreshToken,
-    //   expiresIn: "40 days",
-    // });
-
-    return succesCode(res, {
-      type: "Bearer",
-      access_token: getToken(user.dataValues),
-      role_id: user.dataValues.role_id,
-      avatar_url: user.dataValues.avatar_url,
-    });
-  } catch (err) {
-    errorCode(res, err);
-  }
-};
-
-const register = async (req, res) => {
-  try {
-    const {
-      email,
-      last_name,
-      first_name,
-      gender,
-      phone_number,
-      google_id,
-      role_id,
-      type,
-      password,
-      tutor_profile: { description, stripe_account_id },
-    } = req.body;
-
-    const avatar_url = req.file?.path ? req.file.path : "";
-    var check = await models.users.findOne({
-      where:{
-        email : email
-      }
-    })
-    if(check){
-      return errorCode(res, 'Email đã tồn tại. Vui lòng đăng nhập hoặc tạo tài khoản mới');
-    }
-
-    let user = await models.users.create({
-      user_id: uuidv4(),
-      email,
-      last_name,
-      first_name,
-      gender,
-      avatar_url,
-      phone_number,
-      google_id,
-      role_id,
-      type,
-      password,
-    });
-
-    // tạo luôn profile
-    // tutor
-    if (type == "0") {
-      let tutorProfile = await models.tutor_profile.create({
-        tutor_profile_id: uuidv4(),
-        description,
-        stripe_account_id,
-        status: "1",
-        is_stripe_verified: "1",
-        balance: 0,
-        has_charge_first_time: false,
-        user_id: user.dataValues.user_id,
-      });
-
-      user.tutor_profile = tutorProfile;
-    } else {
-      let studentProfile = await models.student_profile.create({
-        student_profile_id: uuidv4(),
-        student_id: user.dataValues.user_id,
-      });
-
-      user.student_profile = studentProfile;
-    }
-    return succesCode(res, user);
-  } catch (err) {
-    console.log(err);
-    errorCode(res, err);
-  }
-};
-
-const getToken = (user) => {
-  // genarate token
-  const token = jwt.sign(
-    {
-      user_id: user.user_id,
-      email: user.email,
-      first_name: user.firstName,
-      last_name: user.lastName,
-    },
-    "doangiasu",
-    {
-      expiresIn: "30 days",
-    }
+const dateFormat = (date) => {
+  return (
+    date.getFullYear() +
+    pad2(date.getMonth() + 1) +
+    pad2(date.getDate()) +
+    pad2(date.getHours()) +
+    pad2(date.getMinutes()) +
+    pad2(date.getSeconds())
   );
-  return token;
 };
 
-module.exports = { login, register };
+function sortObject(obj) {
+  let sorted = {};
+  let str = [];
+  let key;
+  for (key in obj) {
+    if (obj.hasOwnProperty(key)) {
+      str.push(encodeURIComponent(key));
+    }
+  }
+  str.sort();
+  for (key = 0; key < str.length; key++) {
+    sorted[str[key]] = encodeURIComponent(obj[str[key]]).replace(/%20/g, "+");
+  }
+  return sorted;
+}
+
+const getPaymentUrl = async (req, res) => {
+  var tmnCode = config.vnp_TmnCode;
+  var secretKey = config.vnp_HashSecret;
+  var vnpUrl = config.vnp_Url;
+  var returnUrl = config.vnp_ReturnUrl;
+
+  let date = new Date();
+  let createDate = moment(date).format("YYYYMMDDHHmmss");
+
+  let ipAddr =
+    req.headers["x-forwarded-for"] ||
+    req.connection.remoteAddress ||
+    req.socket.remoteAddress ||
+    req.connection.socket.remoteAddress;
+
+  var orderId = uuidv4();
+  var amount = req.body.amount;
+  var bankCode = req.body.bankCode;
+
+  var orderInfo = req.body.orderDescription;
+  var orderType = "other";
+  var locale = req.body.language;
+  locale = "vn";
+  var currCode = "VND";
+  var vnp_Params = {};
+  vnp_Params["vnp_Version"] = "2.1.0";
+  vnp_Params["vnp_Command"] = "pay";
+  vnp_Params["vnp_TmnCode"] = tmnCode;
+  // vnp_Params['vnp_Merchant'] = ''
+  vnp_Params["vnp_Locale"] = locale;
+  vnp_Params["vnp_CurrCode"] = currCode;
+  vnp_Params["vnp_TxnRef"] = orderId;
+  vnp_Params["vnp_OrderInfo"] = "Thanh toan cho ma GD:" + orderId;
+  vnp_Params["vnp_OrderType"] = "other";
+  vnp_Params["vnp_Amount"] = amount * 100;
+  vnp_Params["vnp_ReturnUrl"] = returnUrl;
+  vnp_Params["vnp_IpAddr"] = ipAddr;
+  vnp_Params["vnp_CreateDate"] = createDate;
+  if (bankCode !== null && bankCode !== "") {
+    vnp_Params["vnp_BankCode"] = bankCode;
+  }
+
+  vnp_Params = sortObject(vnp_Params);
+
+  let querystring = require("qs");
+  let signData = querystring.stringify(vnp_Params, { encode: false });
+  let crypto = require("crypto");
+  let hmac = crypto.createHmac("sha512", secretKey);
+  let signed = hmac.update(new Buffer(signData, "utf-8")).digest("hex");
+  vnp_Params["vnp_SecureHash"] = signed;
+  vnpUrl += "?" + querystring.stringify(vnp_Params, { encode: false });
+
+  return succesCode(res, vnpUrl);
+};
+
+const checkSumPayment = async (req, res) => {
+  let vnp_Params = req.query;
+
+  let secureHash = vnp_Params["vnp_SecureHash"];
+
+  delete vnp_Params["vnp_SecureHash"];
+  delete vnp_Params["vnp_SecureHashType"];
+  vnp_Params = sortObject(vnp_Params);
+
+  let config = require("config"); 
+  let tmnCode = config.get("vnp_TmnCode");
+  let secretKey = config.get("vnp_HashSecret");
+
+  let querystring = require("qs");
+  let signData = querystring.stringify(vnp_Params, { encode: false });
+  let crypto = require("crypto");
+  let hmac = crypto.createHmac("sha512", secretKey);
+  let signed = hmac.update(new Buffer(signData, "utf-8")).digest("hex");
+
+  if (secureHash === signed) {
+    //Kiem tra xem du lieu trong db co hop le hay khong va thong bao ket qua
+
+    res.render("success", { code: vnp_Params["vnp_ResponseCode"] });
+  } else {
+    res.render("success", { code: "97" });
+  }
+};
+
+module.exports = { getPaymentUrl, checkSumPayment };
