# back-end/src/routes/payment.routes.js
@@ -1,0 +1,9 @@
+const express = require("express");
+const {
+  getPaymentUrl,
+} = require("../controllers/payment.controller");
+const paymentRoutes = express.Router();
+
+paymentRoutes.post("/get-payment-url", getPaymentUrl);
+
+module.exports = paymentRoutes;
